--- a/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
@@ -57,7 +57,7 @@
 		<meta name="og:image" content="@imagen" />
 		<meta name="og:site_name" content="pepeizq's deals" />
 		<meta name="og:type" content="website" />
-		<meta name="robots" content="index, follow, noimageindex" />
+		<meta name="robots" content="index, follow, noimageindex, noai, noimageai" />
 		<meta name="keywords" content="deals, games, free, offers, bundles" />
 
 		<link rel="canonical" href="@enlace" />
